--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <%= link_to 'Devmatch', root_path, class: 'navbar-brand' %>
+                    <%= link_to 'Dev Match', root_path, class: 'navbar-brand' %>
                 </div>
                 <div class="collapse navbar-collapse" id="main-nav-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><%= link_to "About", about_path %></li>
+                        <li>
+                            <%= link_to "About", about_path %>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <%= yield %>
+        <div class="container">
+            <%= yield %>
+        </div>
 
     </body>
 </html>
