Added validations and create action

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -18,7 +18,7 @@
                 <%= f.text_area :comments, class: 'form-control' %>
             </div>
 
-            <%= f.submit 'Submit', class: 'btn btn-lg btn-primary' %>
+            <%= f.submit 'Submit', class: 'btn btn-primary' %>
 
             <% end %>
             
