--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
     <head>
         <title>Dev Match</title>
         <%= stylesheet_link_tag    'application', media: 'all' %>
+        <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
         <%= javascript_include_tag 'application' %>
+        <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
         <%= csrf_meta_tags %>
     </head>
     <body>
@@ -24,21 +26,25 @@
                 <div class="collapse navbar-collapse" id="main-nav-collapse">
                     <div class="nav navbar-nav navbar-right">
                         <% if current_user %>
-                            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+                        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
                         <% else %>
-                            <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+                        <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
                         <% end %>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><%= link_to "About", about_path %></li>
-                        <li><%= link_to "Contact Us", new_contact_path %></li>
+                        <li>
+                            <%= link_to "About", about_path %>
+                        </li>
+                        <li>
+                            <%= link_to "Contact Us", new_contact_path %>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="container">
             <% flash.each do |key, value| %>
-                <%= content_tag :div, value, class: "alert alert-#{key}" %>
+            <%= content_tag :div, value, class: "alert alert-#{key}" %>
             <% end %>
             <%= yield %>
         </div>
