--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -31,8 +31,8 @@
 
 <div class="form-group">
     <%= label_tag :card_month, 'Expiration date' %>
-    <%= select_month nil, {add_month_numbers: true}, {name: nil, id: 'card-month'} %>
-    <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year + 15}, {name: nil, id: 'card-year'} %>
+    <%= select_month nil, {add_month_numbers: true}, {name: nil, id: 'card_month'} %>
+    <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year + 15}, {name: nil, id: 'card_year'} %>
 </div>
 
 <div class="form-group">
