--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,33 @@
-<%= image_tag @user.profile.avatar.url %>
-<%= @user.profile.first_name %> <%= @user.profile.last_name %><br />
-<%= @user.profile.job_title %><br />
-<% if current_user.plan_id == 2 || current_user.id == @user.id %>
-    <%= @user.profile.phone_number %><br />
-    <%= @user.profile.contact_email %><br />
-<% end %>
-<%= @user.profile.description %><br />
+<div class="row">
+    <div class="col-md-2 col-md-offset-1 text-center">
+        <%= image_tag @user.profile.avatar.url %>
+    </div>
+    <div class="col-md-6">
+        <h1>
+            <%= @user.profile.first_name %> <%= @user.profile.last_name %> 
+            <% if current_user.id == @user.id %>
+            <small>(you)</small>
+            <% end %>
+        </h1>
+        <p class="lead">
+            <span class="job-title-icon"><%= job_title_icon %></span> 
+            <%= @user.profile.job_title %>
+        </p>
+        <div class="well profile-description">
+            <h3>About Me</h3>
+            <%= html_of(@user.profile.description) %>
+        </div>
+        <% if current_user.plan_id == 2 || current_user.id == @user.id %>
+            <% if current_user.plan_id == 2 %>
+            <div class="well contact-info">
+            <% else %>
+            <div class="well own-contact-info">
+                <h6>The information below is only visible to you and to Pro members.</h6>
+            <% end %>
+            <%= @user.profile.phone_number %>
+            <br />
+            <%= @user.profile.contact_email %>
+            </div>
+        <% end %>
+    </div>
+</div>
