--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/* show action */
+
+
+.user-show-avatar {
+  height: 128px;
+  width: 128px;
+}
+
 .job-title-icon {
   .fa {
     display: inline-block;
@@ -31,7 +39,6 @@
   }
 }
 
-
 .well.profile-description {
   h3 {
     margin-top: 0px;
@@ -52,4 +59,21 @@
     font-style: italic;
     margin-top: 0px;
   }
+}
+
+
+/* index action */
+
+.well.white-bg {
+  background-color: #ffffff;
+}
+
+.user-index-avatar {
+  border: 2px solid white;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 4px 4px #333333;
+  -moz-box-shadow: 0px 4px 4px #333333;
+  box-shadow: 0px 4px 4px #333333;
 }
