--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,15 +13,17 @@
         </p>
         <% end %>
     </div>
-    <div class="col-md-6 col-md-offset-3">
-        <div class="well well-lg">
-            <h2>Sign up</h2>
-            <% if params[:plan] == '2' %>
-                <%= render "pro_form" %>
-            <% else %>
-                <%= render "basic_form" %>
-            <% end %>
-            <%= render "devise/shared/links" %>
-        </div>
+</div>
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+    <div class="well well-lg">
+        <h2>Sign up</h2>
+        <% if params[:plan] == '2' %>
+        <%= render "pro_form" %>
+        <% else %>
+        <%= render "basic_form" %>
+        <% end %>
+        <%= render "devise/shared/links" %>
     </div>
+</div>
 </div>
