--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,10 @@
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-3">
         <div class="well well-lg">
-
+            <h1>Contact Us</h1>
+            <p>
+                Reach out if you have any questions or comments.
+            </p>
             <%= form_for @contact do |f| %>
             <div class="form-group">
                 <%= f.label :name %>
@@ -21,7 +24,7 @@
             <%= f.submit 'Submit', class: 'btn btn-primary' %>
 
             <% end %>
-            
+
         </div>
     </div>
 </div>
