--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,6 @@
-<h2>About Us</h2>
+<h1>About Us</h1>
+<p>
+    Welcome to Dev Match. We are a community of developers, 
+    entrepreneurs, and investors who are interested in meeting 
+    one another and sharing ideas.
+</p>
